2005-12-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialogs/filechooser.py:
	  Removed a comment to not have it appear in .po files.

2005-12-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/spellcheck-dialog.glade:
	  Made dialog invisible. Fixed a typo.

	* lib/gaupol/base/delegates/edit.py:
	  (EditDelegate.replace_both_texts): New method for replacing both main
	  and translation document texts.

	* lib/gaupol/gtk/delegates/spellcheck.py:
	* lib/gaupol/gtk/dialogs/spellcheck.py:
	  Implemented spell-check.

	* lib/gaupol/gtk/dialogs/debug.py (show):
	  Hopefully made the terminal traceback complete.

	* lib/gaupol/gtk/dialogs/preferences.py:
	  (PreferencesDialog.__gsignals__): Removed gobject constants from
	  class-variable position.

2005-12-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/language-dialog.glade:
	  Adjusted tree view sizes.

2005-12-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/preferences-dialog.glade:
	  Enabled search for fallback encoding tree view.

	* data/ui/menubar.xml:
	* data/ui/toolbar.xml:
	* lib/gaupol/gtk/delegates/__init__.py:
	* lib/gaupol/gtk/delegates/spellcheck.py:
	* lib/gaupol/gtk/dialogs/language.py:
	  Implemented spell-check configuring.

	* lib/gaupol/base/util/langlib.py (locales):
	  Removed "en_EN", "eo_EO", "ur" and "ur_PK", which were not found in
	  langs or countries lists.

	* lib/gaupol/gtk/delegates/format.py:
	  Fixed typo.

	* lib/gaupol/gtk/dialogs/preferences.py:
	  Fixed terminology.

	* lib/gaupol/gtk/util/config.py (spell_check):
	  Fixed variable names.

2005-12-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui/menubar.xml:
	* lib/gaupol/base/delegates/format.py:
	* lib/gaupol/gtk/delegates/format.py:
	  Implemented case changing.

2005-12-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui/menubar.xml:
	* lib/gaupol/base/delegates/format.py:
	* lib/gaupol/gtk/delegates/format.py:
	  Implemented italicization toggling.

2005-12-27  Osmo Salomaa  <otsaloma@cc.hut.fi>
